# VitalTrack

./: .gitignore  Makefile  README.md  prd.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/config/: biomarker_ranges.json  settings.py
backend/src/handlers/: biomarker_crud.py  csv_parser.py  insight_fetch_history.py  insight_generate.py  insight_notify.py  insight_store.py  insights_api.py  upload_presign.py
backend/src/middleware/: audit.py  auth.py  error_handler.py  logging_config.py
backend/src/models/: biomarker.py  events.py  insight.py
backend/src/prompts/: insight_v1.jinja2
backend/src/services/: dynamodb_service.py  event_service.py  s3_service.py
backend/src/shared/: constants.py  exceptions.py  validators.py
backend/src/templates/: csv_template.csv
backend/tests/: conftest.py
backend/tests/unit/: test_biomarker_crud.py  test_csv_parser.py  test_insights.py  test_middleware.py  test_validators.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/config/: amplify.ts
frontend/src/hooks/: useAuth.tsx  (+4 more)
infrastructure/: cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/test/: stacks.test.ts
scripts/: clear-biomarkers.py  deploy.sh  seed-data.py
scripts/sample-data/: batch-1-sept2025.csv  batch-2-oct2025.csv  batch-3-nov2025.csv  batch-4-dec2025.csv  batch-5-jan2026.csv  batch-6-feb2026.csv
(+46 files in other folders)
